--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -66,6 +66,9 @@
         text-transform: uppercase;
         font-size: 10px;
     }
+    #sparkBox .chart {
+        display: inline-block;
+    }
     #charts-container,
     #charts {
         display: block;
