--- a/css/sparkline.css
+++ b/css/sparkline.css
@@ -1,5 +1,5 @@
 #sparkBox .chart {
-    display: inline-block;
+    display: none;
     margin-right: 0;
     transition: all 0.3s ease;
 }
